Pending changes in the mainline
===============================

* Fix handling of option "DeidentifyLogs", notably for tags (0010,0010) and (0010,0020)


Version 1.9.7 (2021-08-31)
==========================

General
-------

* New configuration option "DicomAlwaysAllowMove" to disable verification of
  the remote modality in C-MOVE SCP

REST API
--------

* API version upgraded to 15
* Added "Level" option to POST /tools/bulk-modify
* Added missing OpenAPI documentation of "KeepSource" in ".../modify" and ".../anonymize"

Maintenance
-----------

* Added file CITATION.cff
* Linux Standard Base (LSB) builds of Orthanc can load non-LSB builds of plugins
* Fix upload of ZIP archives containing a DICOMDIR file
* Fix computation of the estimated time of arrival in jobs
* Support detection of windowing and rescale in Philips multiframe images


Version 1.9.6 (2021-07-21)
==========================

Orthanc Explorer
----------------

* In lookup and query/retrieve, possibility to provide a specific study date
* Clicking on "Send to remote modality" displays the job information to monitor progress

Maintenance
-----------

* Fix orphaned attachments if bad revision number is provided


Version 1.9.5 (2021-07-08)
==========================

General
-------

* Anonymization is applied recursively to nested tags

REST API
--------

* API version upgraded to 14
* Added "Short", "Simplify" and/or "Full" options to control the format of DICOM tags in:
  - POST /modalities/{id}/find-worklist
  - POST /queries/{id}/answers/{index}/retrieve
  - POST /queries/{id}/retrieve

Maintenance
-----------

* Fix broken "Do lookup" button in Orthanc Explorer
* Error code and description of jobs are now saved into the Orthanc database


Version 1.9.4 (2021-06-24)
==========================

General
-------

* Orthanc now anonymizes according to Basic Profile of PS 3.15-2021b Table E.1-1
* New configuration options: